Chore: Tratando o erro de tentativa de conexao com nos que ja nao estao mais no ar